--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <button class="btn btn-primary" id="play_btn" onclick="startGame()">Play</button>
         <br><br>
         <button class="btn btn-default" id="status"></button>
-        <div id="canvas"></div>
+        <div id="canvas"></div><br><br>
+        <button class="btn btn-danger" id="restart_btn" onclick="restart()">Restart</button>
+
+        <div class="copy_right_footer"> Developed by - Sahasra Ganipineni</div>
     </body><br><br>
 </html>
